# mega-project-list

./: .gitignore  README.md
palindrome/: Cargo.toml
pig_latin/src/: lib.rs
reverse-a-string/: Cargo.toml
reverse-a-string/src/: lib.rs
text/palindrome/src/: lib.rs
text/pig_latin/: Cargo.toml
text/reverse/: Cargo.toml
text/wccopy/: help.txt  table.html
text/wccopy/src/: cli.yml  count.rs  lib.rs  run.rs
vowels_counter/: Cargo.toml
vowels_counter/src/: lib.rs
wccopy/: Cargo.toml  README.md  test.txt
wccopy/src/: cli.yml  config.rs  count.rs  error.rs  lib.rs  main.rs  run.rs
