[package]
name = "wccopy"
version = "1.0.0"
authors = ["Pagliacii <huangmianrui0310@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "2.33.0", features = ["yaml"] }

[[bin]]
name = "wc"
path = "src/main.rs"
